--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ chrono = "0.4.34"
 thiserror = "2.0.11"
 ndarray = "0.16.1"
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+approx = "0.5.1"
