--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "technical-indicators"
-version = "0.1.0"
+version = "1.0.1"
 edition = "2021"
 description = "A library of technical indicators for financial analysis"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["CelsisDurham <celsisdurham@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/rustic-ml/technical-indicators"
+documentation = "https://docs.rs/technical-indicators"
+readme = "README.md"
+keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks"]
+categories = ["finance", "mathematics", "stock-market", "ohlcv", "time-series", "technical-indicators"]
 
 [dependencies]
 polars = { version = "0.46.0", features = ["lazy", "strings", "temporal", "rolling_window"] }
