--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "technical-indicators"
 version = "1.0.1"
 edition = "2021"
 description = "A library of technical indicators for financial analysis"
-authors = ["CelsisDurham <celsisdurham@gmail.com>"]
+authors = ["Celsis Durham <durhamcelsis@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/rustic-ml/technical-indicators"
 documentation = "https://docs.rs/technical-indicators"
