--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ta-lib-in-rust"
-version = "1.0.1"
+version = "1.0.2"
 edition = "2021"
 description = "A library of technical indicators for financial analysis"
 authors = ["Celsis Durham <durhamcelsis@gmail.com>"]
@@ -8,8 +8,8 @@ license = "MIT"
 repository = "https://github.com/rustic-ml/technical-indicators"
 documentation = "https://docs.rs/ta-lib-in-rust"
 readme = "README.md"
-keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks"]
-categories = []
+keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks", "quant"]
+categories = ["Algorithms", "API bindings"]
 
 [dependencies]
 polars = { version = "0.46.0", features = ["lazy", "strings", "temporal", "rolling_window"] }
