--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,19 @@ description = "A library of technical indicators for financial analysis"
 authors = ["Celsis Durham <durhamcelsis@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/rustic-ml/technical-indicators"
+# Add homepage, often same as repository if no separate project page
+homepage = "https://github.com/rustic-ml/technical-indicators"
 documentation = "https://docs.rs/ta-lib-in-rust"
 readme = "README.md"
 keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks"]
-categories = []
+# Add relevant categories for discoverability
+categories = ["science::financial", "algorithms", "mathematics"]
 
 [dependencies]
 polars = { version = "0.46.0", features = ["lazy", "strings", "temporal", "rolling_window"] }
 chrono = "0.4.34"
-thiserror = "2.0.11"
-ndarray = "0.16.1"
+thiserror = "2.0.11" # Consider updating if needed, check compatibility
+ndarray = "0.16.1" # Consider updating if needed, check compatibility
 serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
