--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "ta-lib-in-rust"
 version = "1.0.3"
 edition = "2021"
-description = "A library of technical indicators for financial analysis"
+description = "A library of technical indicators for financial analysis, similar to TA-Lib"
 authors = ["Celsis Durham <durhamcelsis@gmail.com>"]
 license = "MIT"
-repository = "https://github.com/rustic-ml/technical-indicators"
+repository = "https://github.com/rustic-ml/ta-lib-in-rust"
 # Add homepage, often same as repository if no separate project page
-homepage = "https://github.com/rustic-ml/technical-indicators"
+homepage = "https://github.com/rustic-ml/ta-lib-in-rust"
 documentation = "https://docs.rs/ta-lib-in-rust"
 readme = "README.md"
 keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks"]
@@ -19,6 +19,7 @@ exclude = [
     # Use a trailing slash '/' to ensure it's treated as a directory.
     "examples/",
     "target/",
+    
     ".gitignore",
     "Cargo.lock",
 
