--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ exclude = [
 
     ".gitignore",
     "Cargo.lock",
-    "images.png",
+    "images_processed.png",
 
     # You can add more patterns:
     # "another_folder/",
