--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ta-lib-in-rust"
+name = "rusttalib"
 version = "1.0.6"
 edition = "2021"
 description = "A library of technical indicators for financial analysis, similar to TA-Lib"
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/rustic-ml/RusTaLib"
 # Add homepage, often same as repository if no separate project page
 homepage = "https://github.com/rustic-ml/RusTaLib"
-documentation = "https://docs.rs/ta-lib-in-rust"
+documentation = "https://docs.rs/rusttalib"
 readme = "README.md"
 keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks"]
 # Add relevant categories for discoverability
