--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rusttalib"
-version = "1.0.6"
+name = "rustalib"
+version = "1.0.7"
 edition = "2021"
 description = "A library of technical indicators for financial analysis, similar to TA-Lib"
 authors = ["Celsis Durham <durhamcelsis@gmail.com>"]
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/rustic-ml/RusTaLib"
 # Add homepage, often same as repository if no separate project page
 homepage = "https://github.com/rustic-ml/RusTaLib"
-documentation = "https://docs.rs/rusttalib"
+documentation = "https://docs.rs/rustalib"
 readme = "README.md"
 keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks"]
 # Add relevant categories for discoverability
