--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rustalib"
-version = "1.0.7"
+name = "ta-lib-in-rust"
+version = "1.0.8"
 edition = "2021"
 description = "A library of technical indicators for financial analysis, similar to TA-Lib"
 authors = ["Celsis Durham <durhamcelsis@gmail.com>"]
