--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ta-lib-in-rust"
+name = "rustalib"
 version = "1.0.8"
 edition = "2021"
 description = "A library of technical indicators for financial analysis, similar to TA-Lib"
